--- a/config.toml
+++ b/config.toml
@@ -53,14 +53,14 @@ enableEmoji = true
     #   url = "/tags/"
     #   title = ""
     #   weight = 2
-    # [[languages.zh-cn.menu.main]]
-    #   identifier = "categories"
-    #   pre = ""
-    #   post = ""
-    #   name = "分类"
-    #   url = "/categories/"
-    #   title = ""
-    #   weight = 3
+    [[languages.zh-cn.menu.main]]
+      identifier = "categories"
+      pre = ""
+      post = ""
+      name = "分类"
+      url = "/categories/"
+      title = ""
+      weight = 3
   [languages.zh-cn.params]
    description = "后端技术博客"
    keywords = ["go","kubernetes"]
@@ -81,7 +81,7 @@ enableEmoji = true
     # LoveIt 新增 | 0.2.0 是否显示作者
     author = true
     # 网站创立年份
-    since = 2021
+    since = 2022
     # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
     icp = ""
     # 许可协议信息 (支持 HTML 格式)
@@ -236,14 +236,14 @@ enableEmoji = true
   #   url = "/tags/"
   #   title = ""
   #   weight = 2
-  # [[menu.main]]
-  #   identifier = "categories"
-  #   pre = ""
-  #   post = ""
-  #   name = "分类"
-  #   url = "/categories/"
-  #   title = ""
-  #   weight = 3
+  [[menu.main]]
+    identifier = "categories"
+    pre = ""
+    post = ""
+    name = "分类"
+    url = "/categories/"
+    title = ""
+    weight = 3
 
 # Hugo 解析文档的配置
 [markup]
